# help-me-out-here

./: index.html  package.json  settings.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.tsx  Layout.tsx  main.tsx  styles.css  windowScript.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: client.tsx  database.ts  index.ts  openai.ts
src/api/hooks/: index.ts  keys.ts  useChatMutation.ts  useCreateConversationMutation.ts  useGetConversation.ts  useGetConversations.ts  useUpdateConversationMutation.ts
src/clipboard/: index.ts  read-clipboard.ts
src/components/: Button.tsx  FormLabel.tsx  Input.tsx  Markdown.tsx  Modal.tsx  Select.tsx  Spinner.tsx  TextArea.tsx
src/settings/: settings.ts
src/tabs/components/: CreateConversationModal.tsx  PageAnimateLayout.tsx  UpdateConversationModal.tsx
src/tabs/components/ConversationForm/: ConversationForm.tsx  ConversationFormCreate.tsx  ConversationFormEdit.tsx  ConversationFormHeader.tsx  ConversationFormState.tsx  index.ts
src/tabs/components/ConversationForm/messages/: AssistantMessage.tsx  ClipboardMessage.tsx  (+4 more)
src/tabs/components/PromptOptionsSettingsModal/: PromptOptionsSettingsModal.tsx  index.ts
src/tabs/conversations/: ConversationView.tsx  Conversations.tsx  index.ts
src/tabs/home/: Home.tsx
src/tabs/home/messages/: MessageLayout.tsx  SystemMessage.tsx  index.ts
src/tabs/prompt/: Prompts.tsx  index.ts
src/tabs/settings/: ModelSettings.tsx  Settings.tsx
src/tabs/settings/components/: SettingsInput.tsx
src/utils/: dateUtils.ts  formUtils.ts
